mobile layout designed and complete

--- a/styles/style.css
+++ b/styles/style.css
@@ -1,6 +1,13 @@
+@font-face {
+  font-family: "Outfit";
+  src: url("../font/Outfit/Outfit-VariableFont_wght.ttf") format("truetype");
+}
 body {
   box-sizing: border-box;
-  font: size 100%;
+  font-family: "Outfit", sans-serif;
+  font-size: 100%;
+  text-align: center;
+  background-color: hsl(212deg, 45%, 89%);
 }
 body ::after,
 body ::before {
@@ -8,7 +15,81 @@ body ::before {
 }
 body img {
   max-width: 100%;
+  border-radius: 10px;
 }
 body a {
   text-decoration: none;
+}
+body a:link {
+  color: hsl(218deg, 44%, 22%);
+}
+body a:visited {
+  color: hsl(218deg, 44%, 22%);
+}
+body a:hover {
+  color: hsl(220deg, 15%, 55%);
+  text-decoration: underline;
+}
+body a:active {
+  color: hsl(0deg, 0%, 100%);
+}
+body h1 {
+  font-weight: 700;
+  font-size: 22px;
+  color: hsl(218deg, 44%, 22%);
+}
+body p {
+  font-weight: 400;
+  font-size: 15px;
+  color: hsl(212deg, 45%, 89%);
+}
+
+@media screen and (min-width: 345px) {
+  header {
+    display: flex;
+    flex-direction: row;
+    justify-content: center;
+    height: auto;
+    padding: 0;
+    margin: 0;
+  }
+
+  main {
+    margin: 0 0.5em;
+    display: flex;
+    height: auto;
+    flex-direction: column;
+    justify-content: space-around;
+    align-items: center;
+    gap: 20;
+    background-color: hsl(0deg, 0%, 100%);
+    border-radius: 10px;
+    -webkit-border-radius: 10px;
+    -moz-border-radius: 10px;
+    -ms-border-radius: 10px;
+    -o-border-radius: 10px;
+  }
+  main figure {
+    flex: auto;
+    padding: 0;
+    margin: 0.9em;
+  }
+  main h1 {
+    padding: 0.3em 1.3em 0.5em;
+    margin-bottom: 0;
+    margin-top: 0.2em;
+  }
+  main p {
+    padding: 0.5em 1.7em 2em;
+    margin-top: 0;
+  }
+
+  footer {
+    position: relative;
+    top: 3em;
+  }
+  footer p {
+    color: hsl(220deg, 15%, 55%);
+    padding: 0.5em;
+  }
 }/*# sourceMappingURL=style.css.map */
