--- a/css/Mobile-345.css
+++ b/css/Mobile-345.css
@@ -19,13 +19,9 @@
     flex-direction: column;
     justify-content: space-around;
     align-items: center;
-    gap: 20;
+    gap: 0.2px;
     background-color: white;
     border-radius: 10px;
-    -webkit-border-radius: 10px;
-    -moz-border-radius: 10px;
-    -ms-border-radius: 10px;
-    -o-border-radius: 10px;
   }
   main figure {
     flex: auto;
